data/derived/fa15/progs/unify/prog3992.ml.out
Characters 99-100:
  h = getHeads t
               ^
Error: This expression has type char list
       but an expression was expected of type string
